Configurate View Map and Marker Map

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,9 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title> Blank </ion-title>
+    <ion-title align="center"> MAPA </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div id="mapID" style="height: 100%"></div>
+  <div id="mapID"></div>
 </ion-content>
