Get Current Position and show on the map.

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" height="10vh">
   <ion-toolbar>
     <ion-title align="center"> MAPA </ion-title>
   </ion-toolbar>
