--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,17 @@
-<ion-header [translucent]="true" height="10vh">
-  <ion-toolbar>
-    <ion-title align="center"> MAPA </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content>
+<header class="header">
+  <div class="logo">
+    <img src="./assets/icon/maps-header.png" alt="Logo" />
+  </div>
+  <ion-title class="title"> AppMap </ion-title>
+</header>
+<ion-content class="content">
   <div id="mapID"></div>
+  <div class="btn-container">
+    <button class="btn">
+      <ion-icon name="walk" class="icon"></ion-icon>
+    </button>
+    <button class="btn">
+      <ion-icon name="locate" class="icon"></ion-icon>
+    </button>
+  </div>
 </ion-content>
