--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -25,7 +25,102 @@
 // #container a {
 //   text-decoration: none;
 // }
+.header {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
+  background-color: #2e2e2ec9;
+  // width: 55%;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 1rem;
+  padding: 2.5rem 5rem;
+  height: 50px;
+  z-index: 101;
+}
+.logo {
+  width: max-content;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+img {
+  width: 50px;
+  object-fit: contain;
+}
+
+.title {
+  text-align: center;
+  font-size: 1.5rem;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+.content {
+  height: calc(100vh - 90%);
+  position: relative;
+}
+
 #mapID {
-  height: 90vh;
+  height: 100%;
   width: 100%;
+  z-index: 90;
+}
+
+.btn-container {
+  position: absolute;
+  bottom: 1.5rem;
+  left: 50%;
+  transform: translateX(-50%);
+  // height: 3rem;
+  z-index: 100;
+  // background-color: red;
+  display: flex;
+  column-gap: 2.5rem;
+}
+.btn {
+  outline: none;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #2e2e2e;
+  -webkit-box-shadow: 0px 0px 18px 3px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 18px 3px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 18px 3px rgba(0, 0, 0, 0.75);
+  transition: transform, background-color 0.3s ease;
+}
+.btn:hover {
+  background-color: #131212;
+}
+.btn .icon {
+  font-size: 40px;
+  color: #f2f2f2;
+}
+
+@media screen and (max-width: 700px) {
+  img {
+    object-fit: contain;
+    max-width: 40px;
+    max-height: 40px;
+  }
+  .title {
+    // display: none;
+    font-size: 1.3rem;
+    width: min-content;
+  }
+}
+@media screen and (max-width: 425px) {
+  .header {
+    gap: 0.5rem;
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
 }
