--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,14 +11,11 @@
       <ion-icon name="chevron-up-circle"></ion-icon>
     </ion-fab-button>
     <ion-fab-list side="top">
-      <ion-fab-button>
-        <ion-icon name="walk" (click)="startRoute()"></ion-icon>
+      <ion-fab-button (click)="toggleRoute()">
+        <ion-icon [name]="iconName"></ion-icon>
       </ion-fab-button>
-      <ion-fab-button disabled >
-        <ion-icon name="locate" (click)="setPoint()"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button>
-        <ion-icon name="globe"></ion-icon>
+      <ion-fab-button (click)="setPoint()">
+        <ion-icon name="locate"></ion-icon>
       </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
