Change icon delete button and function

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,6 +17,9 @@
       <ion-fab-button (click)="setPoint()">
         <ion-icon name="locate"></ion-icon>
       </ion-fab-button>
+      <ion-fab-button (click)="deleteRoute()">
+        <ion-icon name="trash"></ion-icon>
+      </ion-fab-button>
     </ion-fab-list>
   </ion-fab>
 </ion-content>
