--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -85,8 +85,8 @@ img {
 }
 .btn {
   outline: none;
-  width: 60px;
-  height: 60px;
+  // width: 60px;
+  // height: 60px;
   border-radius: 50%;
   display: flex;
   align-items: center;
