Config files for build and android studio (FINAL)

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,6 +17,9 @@
       <ion-fab-button (click)="setPoint()" color="secondary" class="btn btn-set">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
+      <ion-fab-button (click)="recenterMap()" class="btn btn-center">
+        <ion-icon name="locate"></ion-icon>
+      </ion-fab-button >
       <ion-fab-button (click)="deleteRoute()" color="trash" class="btn btn-delete">
         <ion-icon name="trash"></ion-icon>
       </ion-fab-button>
